test: add more unit test for coverage jacoco and fixed sonar issues